<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.gautelis</groupId>
    <artifactId>raft-parent</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>raft-parent</name>
    <url>http://www.example.com</url>

    <modules>
        <module>raft-wire</module>
        <module>raft-membership</module>
        <module>raft-state-machine</module>
        <module>raft-storage</module>
        <module>raft-core</module>
        <module>raft-transport-netty</module>
        <module>raft-telemetry</module>
        <module>raft-runtime</module>
        <module>raft-app-kv</module>
        <module>raft-app-reference</module>
        <module>raft-dist</module>
        <module>raft-tests</module>
        <module>graft-cpp/java-probe</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>21</maven.compiler.release>
        <log4j.version>2.26.0</log4j.version>
        <slf4j.version>2.0.18</slf4j.version>
        <vopn.version>3.0-SNAPSHOT</vopn.version>
        <junit.version>6.1.0</junit.version>
        <netty.version>4.2.14.Final</netty.version>
        <protobuf.version>4.35.0</protobuf.version> <!-- must match PROTOC_VERSION in scripts/protoc-lite.sh -->
        <protobuf.plugin.version>0.6.1</protobuf.plugin.version>
        <skipJepsenTests>false</skipJepsenTests>
        <javadoc.failOnError>true</javadoc.failOnError>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-bom</artifactId>
                <version>${netty.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.gautelis</groupId>
                <artifactId>raft-wire</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.gautelis</groupId>
                <artifactId>raft-storage</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.gautelis</groupId>
                <artifactId>raft-membership</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.gautelis</groupId>
                <artifactId>raft-state-machine</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.gautelis</groupId>
                <artifactId>raft-core</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.gautelis</groupId>
                <artifactId>raft-transport-netty</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.gautelis</groupId>
                <artifactId>raft-runtime</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.gautelis</groupId>
                <artifactId>raft-telemetry</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.gautelis</groupId>
                <artifactId>raft-app-kv</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.gautelis</groupId>
                <artifactId>raft-app-reference</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.gautelis</groupId>
                <artifactId>vopn</artifactId>
                <version>${vopn.version}</version>
            </dependency>

            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-api</artifactId>
                <version>${log4j.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-core</artifactId>
                <version>${log4j.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-slf4j2-impl</artifactId>
                <version>${log4j.version}</version>
            </dependency>

            <dependency>
                <groupId>com.google.protobuf</groupId>
                <artifactId>protobuf-javalite</artifactId>
                <version>${protobuf.version}</version>
            </dependency>

            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <extensions>
            <extension>
                <groupId>kr.motd.maven</groupId>
                <artifactId>os-maven-plugin</artifactId>
                <version>1.7.1</version>
            </extension>
        </extensions>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                    <configuration>
                        <source>21</source>
                        <target>21</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.xolstice.maven.plugins</groupId>
                    <artifactId>protobuf-maven-plugin</artifactId>
                    <version>${protobuf.plugin.version}</version>
                </plugin>
                <plugin>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.4.0</version>
                    <configuration>
                        <filesets>
                            <fileset>
                                <directory>${maven.multiModuleProjectDirectory}</directory>
                                <includes>
                                    <include>**/*.log</include>
                                </includes>
                                <followSymlinks>false</followSymlinks>
                            </fileset>
                        </filesets>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.3.1</version>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.3.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.4.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>3.1.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>3.1.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>3.12.1</version>
                </plugin>
                <plugin>
                    <artifactId>maven-project-info-reports-plugin</artifactId>
                    <version>3.6.1</version>
                </plugin>
                <plugin>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.12.0</version>
                    <configuration>
                        <failOnError>${javadoc.failOnError}</failOnError>
                        <quiet>true</quiet>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.3.1</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-javadoc-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>deps</id>          <!-- mvn -Pdeps validate -->
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>versions-maven-plugin</artifactId>
                        <version>2.18.0</version>
                        <executions>
                            <execution>
                                <id>show‑updates</id>
                                <phase>validate</phase>   <!-- any phase works; validate is fast -->
                                <goals>
                                    <goal>display-dependency-updates</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
